--- a/sanjai.html
+++ b/sanjai.html
@@ -59,15 +59,15 @@ A            text-align: center;
 </body>
 </html>
   
-  <a href="#"><img src="icons/layout,.png" width="20"> layout</a>
-  <a href="#"><img src="icons/label.png" width="20"> Label</a>
-  <a href="#"><img src="icons/buttion.jpg" width="18"> Button</a>
-  <a href="#"><img src="icons/text box.png" width="22"> text box</a>
-  <a href="#"><img src="icons/check box.png".png" width="20"> Check box</a>
-  <a href="#"><img src="icons/radio button.png" width="20">Radio button</a>
-  <a href="#"><img src="icons/table.png" width="20">Table</a>
-  <a href="#"><img src="icons/navigation.png" width="20"> Navigation</a>
-  <a href="#"><img src="icons/image.png" width="23"> image</a>
+  <a href="#"><img src="layout,.png" width="20"> layout</a>
+  <a href="#"><img src="label.png" width="20"> Label</a>
+  <a href="#"><img src="buttion.jpg" width="18"> Button</a>
+  <a href="#"><img src="text box.png" width="22"> text box</a>
+  <a href="#"><img src="check box.png".png" width="20"> Check box</a>
+  <a href="#"><img src="radio button.png" width="20">Radio button</a>
+  <a href="#"><img src="table.png" width="20">Table</a>
+  <a href="#"><img src="navigation.png" width="20"> Navigation</a>
+  <a href="#"><img src="image.png" width="23"> image</a>
 </div>  
 </body>
 <head>
